--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,14 @@
     publisher={MIPRO}
     url={http://www.ericsson.com/hr/etk/dogadjanja/mipro_2008/1220.pdf}
 }
+@book{Ashmore2014,
+    author = {Ashmore, Sondra and Runyan, Kristin},
+    title = {Introduction to Agile Methods},
+    year = {2014},
+    isbn = {032192956X, 9780321929563},
+    edition = {1st},
+    publisher = {Addison-Wesley Professional},
+} 
 @inbook{Aulet2013,
     author = {Bill Aulet},
     title = {Disciplined Entrepreneurship: 24 Steps to a Successful Startup},
@@ -487,6 +495,16 @@
     acmid = {2677034},
     publisher = {ACM},
     address = {New York, NY, USA},
+} 
+@inbook{Jensen2014,
+    author = {Jensen, Randall W.},
+    title = {Improving Software Development Productivity: Effective Leadership and Quantitative Methods in Software Management},
+    year = {2014},
+    isbn = {0133562670, 9780133562675},
+    chapter = {15. Function Point Sizing},
+    edition = {1st},
+    publisher = {Prentice Hall Press},
+    address = {Upper Saddle River, NJ, USA},
 } 
 @book{Jones1996,
     author = {Jones, Capers},
