--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -702,9 +702,10 @@
                 doubled to fill the desired range of $[-1,1]$. Thus the CRI schedule score
                 for each project becomes the following.
                 
-                \[
+                \begin{equation}
+                \label{eq:CDF}
                     S_{4_i} = 2k \cdot (C.D.F.(\Delta_i) - \frac{1}{2})
-                \]
+                \end{equation}
                 where
                 \begin{itemize}
                     \item $S_{4_i}$ is the schedule score for Project ID $i$
