--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -21,11 +21,13 @@
     provides a technique for a software development organization to create
     a single number score which indicates the overall performance
     of the organization. The
-    score is based upon data collected for 5 result indicators
+    score is based upon data collected for 5 key result indicators
     of a software development organization: quality, availability,
     satisfaction, schedule, and requirements.  It is not meant
     to be comparative between organizations, but to 
-    form a historical baseline for a specific organization.  
+    form a historical baseline for a specific organization.  The single
+    number is targeted for upper-level management whom need a quick
+    and simple strategy to evaluate the performance of the organization.
 
 \subsection{OVERVIEW}
     
@@ -565,15 +567,16 @@
 
 \subsection{ORGANIZATION OF THE WORK}
 
-    The remainder of this dissertation is divided into 5 chapters.  The next chapter provides
-    an overview of software, software development lifecycles, software engineering, and software
-    development organizations.  Chapter 3 introduces what is meant by the term data-driven
-    software engineering. Chapter 4 then provides an explanation of the Cumulative
+    The remainder of this dissertation is divided into 7 chapters.  Chapter 2 provides
+    an overview of software, software development life cycles, software engineering, and software
+    development organizations.  Chapter 3 introduces some existing techniques for measuring
+    a software development organization. Chapter 4 then provides an explanation of the Cumulative
     Result Indicator (CRI).  It will present the essential elements for calculating the CRI, as well
     as the formulas, framework, and data necessary to produce the CRI. Chapter 5 provides
-    a technological framework for generating and storing the current and historical CRI values.
+    a technological framework for storing the current and historical CRI values.
     Chapter 6 demostrates how CRI can be implemented in a software development portion of 
-    a large financial institution.  Chapter 7 concludes the dissertation with a summary
-    of the results and some possible future directions for further enhancements. 
+    a large financial institution. Chapter 7 discusses some possible future directions 
+    for further enhancements. Chapter 8 concludes the dissertation with a summary
+    of the results. 
 
 \end{document}
