--- a/references.bib
+++ b/references.bib
@@ -917,9 +917,20 @@
 @online{Swanstrom2015,
     author = {Ryan Swanstrom},
     title = {dissertation-scoring-sdo},
+    organization = {Github},
     url = {https://github.com/ryanswanstrom/dissertation-scoring-sdo},
     year = {2015},
-    month = {3}
+    month = {3},
+    notes = {R source code}
+}
+@online{Swanstrom2015s,
+    author = {Ryan Swanstrom},
+    title = {CRI Scores dissertation-scoring-sdo},
+    organization = {Sense},
+    url = {http://goo.gl/1ww9St},
+    year = {2015},
+    month = {3},
+    notes = {R source code output}
 }
 @article{Taylor2010,
     author = {Taylor, Quinn and Giraud-Carrier, Christophe},
