--- a/appendices.tex
+++ b/appendices.tex
@@ -89,6 +89,8 @@ APPENDIX\\
 
 \section{CASE STUDY SOURCE CODE} 
 \label{app:case}
+    A full set of the source code and applicable output is available 
+    at \cite{Swanstrom2015s}.
 
 
     \subsection{QUALITY HISTORICAL R CODE AND ANALYSIS}
@@ -134,6 +136,8 @@ APPENDIX\\
     \subsection{AVAILABILITY SCORES - R CODE}
         \lstinputlisting[language=R, label=src:availability]{source/availability.R}
         
+    \subsection{SCHEDULE SCORES - R CODE}
+        \lstinputlisting[language=R, label=src:schedule]{source/schedule.R}
         
     \subsection{REQUIREMENTS SCORES - R CODE}
         \subsubsection{REQUIREMENTS HISTOGRAM}
@@ -158,6 +162,9 @@ APPENDIX\\
         \subsubsection{REQUIREMENTS R CODE}
         \lstinputlisting[language=R, label=src:requirements]{source/requirements.R}
         
+        
+    \subsection{OVERALL SCORES - R CODE}
+        \lstinputlisting[language=R, label=src:overall]{source/overall.R}
         
     
 
